[package]
name = "rizzer"
version = "0.2.0"
edition = "2021"
authors = ["Raj Singh <thatonebipanda@gmail.com>"]
description = "Fuzzy matching tool to find string similarity"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AnarchistHoneybun/rizzer"


[dependencies]
unicode-normalization = "0.1.23"
